--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "z-schema": "4.2.3"
   },
   "devDependencies": {
-    "@babel/cli": "7.11.6",
+    "@babel/cli": "^7.11.6",
     "@babel/core": "7.11.6",
     "@babel/plugin-check-constants": "7.0.0-beta.38",
     "@babel/plugin-proposal-class-properties": "7.10.4",
@@ -154,7 +154,7 @@
     "child-process-promise": "2.2.1",
     "concurrently": "5.3.0",
     "convert-hrtime": "3.0.0",
-    "cross-env": "7.0.2",
+    "cross-env": "^7.0.2",
     "delete": "1.1.0",
     "dependency-check": "4.1.0",
     "detect-browser": "5.1.1",
