--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.11.2",
+    "@octokit/rest": "^18.0.6",
     "@types/clone": "2.1.0",
     "@types/cors": "2.8.7",
     "@types/deep-equal": "1.0.1",
@@ -138,6 +139,7 @@
     "@babel/preset-env": "7.11.5",
     "@babel/preset-typescript": "7.10.4",
     "@babel/types": "7.11.5",
+    "@octokit/types": "^5.5.0",
     "@types/core-js": "2.5.3",
     "@types/faker": "4.1.12",
     "@types/memdown": "3.0.0",
