--- a/examples/github/package.json
+++ b/examples/github/package.json
@@ -34,6 +34,7 @@
     "esm": "3.2.25",
     "file-loader": "6.1.0",
     "html-webpack-plugin": "4.4.1",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "0.11.0",
     "ncp": "2.0.0",
     "rimraf": "3.0.2",
