--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
     "memdown": "5.1.0",
     "mocha": "8.1.3",
     "mocha.parallel": "0.15.6",
-    "nconf": "0.10.0",
+    "nconf": "^0.10.0",
     "pouchdb": "7.2.2",
     "pouchdb-adapter-http": "7.2.2",
     "pouchdb-adapter-idb": "7.2.2",
@@ -201,7 +201,7 @@
     "request": "2.88.2",
     "request-promise": "4.2.6",
     "request-promise-native": "1.0.9",
-    "rimraf": "3.0.2",
+    "rimraf": "^3.0.2",
     "rollup": "2.26.10",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
