--- a/package.json
+++ b/package.json
@@ -214,7 +214,7 @@
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "3.9.7",
-    "walk-sync": "2.2.0",
+    "walk-sync": "^2.2.0",
     "watch": "1.0.2",
     "watchify": "3.11.1",
     "webpack": "4.44.1",
